--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -6,6 +6,9 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
 }
+//FCM
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     namespace 'com.monotics.app.capstone_app'
@@ -87,4 +90,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    //FCM
+    implementation platform('com.google.firebase:firebase-bom:29.1.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-messaging-ktx' //FCM-push
 }
