--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+
         </activity>
         <activity android:name=".ProfileActivity"></activity>
         <activity android:name=".MissActivity"></activity>
@@ -51,7 +52,19 @@
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="c41df9984c43c2eaf05b3b1b0d075ae4"/>
+        <service
+            android:name=".ForegroundMessagingService"
+            android:exported="false" />
 
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:enabled="true"
+            android:exported="true"
+            android:stopWithTask="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
