--- a/App/build.gradle
+++ b/App/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.14'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
+        classpath "com.squareup.okhttp3:okhttp:4.9.1"
 
     }
 }
