--- a/package.json
+++ b/package.json
@@ -12,16 +12,13 @@
     "firebase": "^9.17.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
-    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
-    "react-player": "^2.12.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.1.5",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3",
-    "victory": "^36.6.10"
+    ".6styled-components": "^5.3"
   },
   "browserslist": {
     "production": [
